--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -478,6 +478,13 @@ footer.sticky-bottom {
 	text-align: right
 }
 
+@media (max-width:500px){
+	img.projects {
+	  width: 100%; 
+	  height: auto; 
+	}
+}
+
 .publications {
 	margin-top: 2rem
 }
