--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -72,7 +72,7 @@ body.sticky-bottom-footer {
 }
 
 .container {
-	max-width: 800px
+	max-width: 850px
 }
 
 .profile img {
@@ -479,7 +479,7 @@ footer.sticky-bottom {
 }
 
 @media (max-width:500px){
-	img.projects {
+	.projects img.projects {
 	  width: 100%; 
 	  height: auto; 
 	}
